// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/locations/LocationTagAddition renders without crashing 1`] = `
Object {
  "children": <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <LocationTagModule />
  </Provider>,
  "initialEntries": Array [
    "/location/group",
  ],
}
`;

exports[`containers/pages/locations/LocationUnitAddition renders without crashing 1`] = `
Object {
  "children": <Provider
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  >
    <LocationUnitModule />
  </Provider>,
  "initialEntries": Array [
    "/location/group",
  ],
}
`;
